demo/35-dns-policy/policy-allow-external-dns-egress.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: security.allow-external-dns-egress
spec:
  tier: security
  selector: "app == 'netshoot' || app == 'centos'"
  order: 200
  types:
    - Egress
  egress:
  - action: Allow
    protocol: UDP
    source: {}
    destination:
      ports:
      - '53'
  - action: Allow
    source: {}
    destination:
      domains:
      - '*.google.com'
      - 'google.com'
  # - action: Allow
  #   destination:
  #     selector: domain == "external"
  - action: Deny
    source: {}
    destination:
      selector: type == "public"
  # example to pass all other traffic to the next tier
  # - action: Pass
  #   source: {}
  #   destination: {}
